--- a/modules/core/system/templates/admin_logs.html
+++ b/modules/core/system/templates/admin_logs.html
@@ -1,43 +1,5 @@
 
-<style>
-  table {width:100%;}
-  td {
-    color: black;
-  }
-  /* Trace */
-
-  .level10 {
-    background-color: #dfefff !important;
-  }
-  /* Debug */
-
-  .level20 {
-    background-color: #bdf !important;
-  }
-  /* Info */
-
-  .level30 {
-    background-color: #cf8 !important;
-  }
-  /* Warn */
-
-  .level40 {
-    background-color: #FCFCA7 !important;
-  }
-  /* Error */
-
-  .level50 {
-    background-color: #F8B5B5 !important;
-  }
-  /* Fatal */
-
-  .level60 {
-    background-color: #e68865 !important;
-  }
-
-</style>
-
-<table>
+<table id="logs-table">
   <thead>
 
     <tr>
@@ -58,7 +20,7 @@
 
     {{#each this}}
 
-    <td>
+    <td class="{{@key}}">
 
       {{this}}
 
