--- a/modules/extra/entityUI/templates/admin_entity_types.html
+++ b/modules/extra/entityUI/templates/admin_entity_types.html
@@ -5,10 +5,10 @@
 
 </script>
 
-
 <div class="admin-inputs">
-  <div class="admin-header admin-header-padding">Manage entity types</div>
-
+{{#each current}}
+  {{this}}
+  {{/each}}
   <table id="entity-types" style="margin-top: 0px;">
 
   {{#each entityTypes}}
