--- a/modules/core/menu/templates/submenu.html
+++ b/modules/core/menu/templates/submenu.html
@@ -1,11 +1,19 @@
-<ul class="sub-menu"> 
-  {{#children}} 
-      {{#if (iris_menu path)}} 
-        <li {{#if children}} class="has-children" {{/if}}>
-            <a href=" {{path}} "> {{title}} {{#if children}}<span class="glyphicon glyphicon-triangle-bottom"></span>{{/if}}</a></li> 
-            {{#if this.children}} 
-                {{> submenu}} 
-            {{/if}} 
-      {{/if}} 
-   {{/children}} 
+<ul class="sub-menu">
+
+  {{#children}}
+    {{#if (iris_menu path)}}
+
+      <li {{#if children}} class="has-children" {{/if}}>
+
+        <a href="{{path}}">{{title}} {{#if children}}<span class="glyphicon glyphicon-triangle-bottom"></span>{{/if}}</a>
+
+        {{#if this.children}}
+          {{> submenu}}
+        {{/if}}
+
+      </li>
+
+    {{/if}}
+  {{/children}}
+
  </ul>
