--- a/modules/core/system/templates/admin_wrapper.html
+++ b/modules/core/system/templates/admin_wrapper.html
@@ -21,6 +21,8 @@
   <section class="col-sm-10 col-sm-offset-2" id="main_content">
 
     <h1>{{req.irisRoute.options.title}}</h1>
+    <p class="center">{{req.irisRoute.options.description}}</p>
+
     {{{iris_messages}}} 
     [[[tabs]]]
     [[[MAINCONTENT]]]
