--- a/modules/extra/blocks/templates/admin_blockslist.html
+++ b/modules/extra/blocks/templates/admin_blockslist.html
@@ -1,10 +1,9 @@
 
 <div class="admin-inputs">
-  <div class="admin-header admin-header-padding">Blocks</div>
   <table class="table no-margin-top" id="entity-list">
 
     <tbody>
-      <tr class="admin-header admin-header-lighter">
+      <tr class="">
         <th style="border-top: 0px;">Block</th>
         <th style="border-top: 0px;">Options</th>
       </tr>
