admin form styling

--- a/modules/extra/configUI/templates/admin_export_config.html
+++ b/modules/extra/configUI/templates/admin_export_config.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
 </script>
 <div class="admin-inputs no-fieldset-bg">
 
-  <div class="admin-header admin-header-padding">Export Config</div>
+  <div class="admin-header-padding">Export Config</div>
   <div class="borders">
 
     <div style="padding: 10px; ">
