--- a/modules/extra/configUI/templates/admin_import_config.html
+++ b/modules/extra/configUI/templates/admin_import_config.html
@@ -21,7 +21,7 @@
   })
 
 </script>
-<div class="admin-inputs no-fieldset-bg">
+<div class="no-fieldset-bg">
 
   <div class="admin-header admin-header-padding">Import Config</div>
   <div class="borders">
