--- a/modules/core/frontend/templates/tabs.html
+++ b/modules/core/frontend/templates/tabs.html
@@ -1,5 +1,14 @@
-<ul id="tabs">
-  {{#each list}}
-  <li class="{{this.class}}"><a href="{{this.link}}">{{this.title}}</a></li>
-  {{/each}}
-</ul>
+
+{{#if list}}
+<nav class="navbar navbar-default">
+  <ul class="nav navbar-nav navbar-left">
+
+    {{#each list}}
+
+      <li class="{{this.class}}"><a href="{{this.link}}">{{this.title}}</a></li>
+
+    {{/each}}
+
+  </ul>
+</nav>
+{{/if}}
