--- a/modules/core/frontend/templates/404.html
+++ b/modules/core/frontend/templates/404.html
@@ -33,9 +33,11 @@
 
       <br />
 
-      <p>Hi there! Iris is serving up this website, but there doesn't appear to be anything ready to use as a front page. To set a front page, go to the <a href="/admin">site administration section</a>, create a new <b>page</b> entity and give it a path of '/'. <a href="https://github.com/CityWebConsultants/Iris/wiki/Setup-and-Installation#creating-a-front-page">See the documentation for more details.</a></p>
+      <p>Hi there! Iris is serving up this website, but there doesn't appear to be anything ready to use as a front page. To set a front page, go to the <a href="/admin">site administration section</a>, create a new <b>page</b> entity and give it a path of '/'. <a target="_blank" href="https://github.com/CityWebConsultants/Iris/wiki/Making-a-blog---part-1---Entities,-entity-types-&-permissions">See the documentation for more details.</a></p>
 
-      <p>To replace this page or customize this message, put a new <b>404.html</b> in your theme's templates directory. See the <a href="https://github.com/CityWebConsultants/Iris/wiki/Theming-and-Frontend#template-lookups-naming-and-overrides">Template lookups, naming and overrides</a> section of the documentation to learn more.</p>
+      <p>The above example requires the 'Page' module to be enabled.</p>
+
+      <p>To replace this page or customize this message, put a new <b>404.html</b> in your theme's templates directory. See the <a target="_blank" href="https://github.com/CityWebConsultants/Iris/wiki/Making-a-blog---part-2---Making-a-theme">Adding templates to your theme</a> section of the documentation to learn more.</p>
 
       <br />
 
