various tidy up fixes and password strength helper

--- a/modules/core/frontend/templates/403.html
+++ b/modules/core/frontend/templates/403.html
@@ -11,20 +11,8 @@
 <title>Iris</title>
 
 <body>
-  
-  <style>
-    .main-container {
-      margin: 0 auto;
-      width: 800px;
-      border: 1px solid #efefef;
-      border-radius: 6px;
-      padding: 20px;
-      margin-top: 50px;
-    }
 
-  </style>
-
-  <div class="main-container">
+  <div class="narrow-container">
     
     {{{iris_messages}}}
 
