--- a/modules/core/frontend/templates/404.html
+++ b/modules/core/frontend/templates/404.html
@@ -14,19 +14,7 @@
 
   {{#front}}
 
-  <style>
-    .main-container {
-      margin: 0 auto;
-      width: 800px;
-
-      border: 1px solid #efefef;
-      border-radius: 6px;
-      padding: 20px;
-      margin-top: 50px;
-    }
-  </style>
-
-  <div class="main-container">
+  <div class="narrow-container">
 
     <div class="iris-description">
       <h1>It works!</h1>
