Touchup on admin nav
Small hover time on root element
Triangle now shows something is open

Signed-off-by: Alex Bor <alexhbor@gmail.com>

--- a/modules/core/menu/templates/menu__admin_toolbar__admin_sidebar.html
+++ b/modules/core/menu/templates/menu__admin_toolbar__admin_sidebar.html
@@ -3,7 +3,7 @@
 $(document).ready(function(){
     $('ul.menu .has-children span').click(function(e){
       e.preventDefault();
-      $(this).parent().parent().find('.sub-menu').first().toggleClass('open');
+      $(this).parent().toggleClass('open').parent().find('.sub-menu').first().toggleClass('open');
     });
 });
 
