Fix admin_entity.html to not show edit title on create

--- a/modules/extra/entityUI/templates/admin_entity.html
+++ b/modules/extra/entityUI/templates/admin_entity.html
@@ -1,3 +1,9 @@
-
-  <div class="admin-header admin-header-padding">Edit {{type}} {{#if eid}}{{eid}}{{/if}}</div>
+{{#if eid}}
+  
   [[[form entity,{{type}},{{eid}}]]]
+  
+{{else}}
+  
+  [[[form entity,{{type}}]]]
+  
+{{/if}}
