--- a/modules/extra/triggers/templates/admin_triggers_form.html
+++ b/modules/extra/triggers/templates/admin_triggers_form.html
@@ -1,3 +1,5 @@
+<script src="/modules/forms/jsonform/deps/opt/ace/ace.js"></script>
+<script src="/modules/forms/jsonform/deps/opt/ace/mode-javascript.js"></script>
 
 {{#if action}}
 
