--- a/modules/extra/autopath/templates/admin_autopath.html
+++ b/modules/extra/autopath/templates/admin_autopath.html
@@ -1,8 +1,7 @@
-
 {{#each entityTypes}} 
 
 <h2>{{this}}</h2>
 
-  [[[form autopath,{{this}}]]] 
+{{{iris 'form' '{"formID":"autopath","entityType":"$this"}'}}}
 
 {{/each}}
