--- a/modules/extra/blocks/templates/admin_blockslist.html
+++ b/modules/extra/blocks/templates/admin_blockslist.html
@@ -18,9 +18,10 @@
     </tbody>
   </table>
   <div class="admin-header admin-header-padding">Create a new block</div>
+
   {{#if blockTypes}}
 
-  [[[form newBlockForm]]]
+    {{{iris 'form' '{"formID":"newBlockForm"}'}}}
 
   {{else}}
 
