--- a/modules/extra/entityUI/templates/admin_schema_field_delete.html
+++ b/modules/extra/entityUI/templates/admin_schema_field_delete.html
@@ -1,6 +1,1 @@
-
-
-[[[form schemafieldDelete,{{entityType}},{{field}}]]]
-
-
-
+{{{iris 'form' '{"formID":"schemafieldDelete","entityType":"$entityType","field":"$field"}'}}}
