--- a/modules/extra/entityUI/templates/admin_schema_field_widget.html
+++ b/modules/extra/entityUI/templates/admin_schema_field_widget.html
@@ -1,2 +1,1 @@
-
-[[[form schemafieldwidgets,{{entityType}},{{field}},{{parent}}]]]
+  {{{iris 'form' '{"formID":"schemafieldwidgets","entityType":"$entityType","field":"$field","parent":"$parent"}'}}}
