--- a/modules/extra/menu_ui/templates/admin_menu_form.html
+++ b/modules/extra/menu_ui/templates/admin_menu_form.html
@@ -1,5 +1,6 @@
 <div class="admin-inputs">
   <div class="admin-header admin-header-padding">Create new menu</div>
 
-  [[[form menu]]]
+{{{iris 'form' '{"formID":"menu"}'}}}
+  
 </div>
