--- a/modules/extra/textfilters/templates/admin_textfilters_form.html
+++ b/modules/extra/textfilters/templates/admin_textfilters_form.html
@@ -1,5 +1,9 @@
 {{#if formatname}}
-[[[form textfilter,"{{formatname}}"]]]
+
+{{{iris 'form' '{"formID":"textfilter","formatname":"$formatname"}'}}}
+
 {{else}}
-[[[form textfilter]]]
+
+{{{iris 'form' '{"formID":"textfilter"}'}}}
+
 {{/if}}
