--- a/modules/core/user/templates/login.html
+++ b/modules/core/user/templates/login.html
@@ -2,6 +2,6 @@
 
 <section id="login-page">
   <div id="login-form">
-    [[[form login]]]
+{{{iris 'form' '{"formID":"login"}'}}}
   </div>
 </section>
