--- a/modules/core/user/templates/passwordReset.html
+++ b/modules/core/user/templates/passwordReset.html
@@ -2,6 +2,6 @@
 
 <section id="login-page">
   <div id="login-form">
-    [[[form passwordReset]]]
+    {{{iris 'form' '{"formID":"passwordReset"}'}}}
   </div>
 </section>
