--- a/modules/extra/entityUI/templates/admin_entity.html
+++ b/modules/extra/entityUI/templates/admin_entity.html
@@ -1,9 +1,9 @@
 {{#if eid}}
   
-  [[[form entity,{{type}},{{eid}}]]]
-  
+{{{iris 'form' '{"formID":"entity","eid":$id},"entityType':"$type"}}}
+
 {{else}}
   
-  [[[form entity,{{type}}]]]
+{{{iris 'form' '{"formID":"entity","eid":$id}'}}}
   
 {{/if}}
