--- a/modules/extra/entityUI/templates/admin_schema.html
+++ b/modules/extra/entityUI/templates/admin_schema.html
@@ -23,7 +23,10 @@
   <div class="admin-header admin-header-padding">Edit Entity</div>
 
   <div id="current-fields">
-    [[[form schema,{{entityType}},existing]]]
+    
+
+      {{{iris 'form' '{"formID":"schema","entityType":"$entityType","existing":true}'}}}
+
   </div>
 
 {{else}}
@@ -31,8 +34,12 @@
 <!--<h1>Create new entity type</h1>-->
 
 <div class="admin-inputs">
+
   <div class="admin-header admin-header-padding">Create A New Schema</div>
-  [[[form schema,{{entityType}}]]]
+  
+  {{{iris 'form' '{"formID":"schema","entityType":"$entityType","existing":false}'}}}
+
 </div>
+
 {{/if}}
 
