--- a/modules/extra/entityUI/templates/admin_schema_field.html
+++ b/modules/extra/entityUI/templates/admin_schema_field.html
@@ -1,3 +1,2 @@
-
-[[[form schemafield,{{entityType}},{{field}},{{parent}}]]]
+{{{iris 'form' '{"formID":"schemafield","entityType":"$entityType","field":"$field","parent":"$parent"}'}}}
 
