--- a/modules/extra/entityUI/templates/admin_schema_manage_fields.html
+++ b/modules/extra/entityUI/templates/admin_schema_manage_fields.html
@@ -37,7 +37,7 @@
   
 </script>
 <div id="current-fields">
-
-    [[[form schemaFieldListing,{{entityType}},{{parent}}]]]
+  
+  {{{iris 'form' '{"formID":"schemaFieldListing","entityType":"$entityType","parent":"$parent"}'}}}
 
 </div>
