--- a/modules/extra/triggers/templates/admin_triggers_form.html
+++ b/modules/extra/triggers/templates/admin_triggers_form.html
@@ -3,11 +3,11 @@
 
 {{#if action}}
 
-  [[[form actions,"{{action}}"]]]
+{{{iris 'form' '{"formID":"actions","action":"$action"}'}}}
 
 {{else}}
 
-  [[[form actions]]]
+{{{iris 'form' '{"formID":"actions"}'}}}
 
 {{/if}}
 
