Convert parseTemplateFile and error pages

--- a/modules/core/frontend/templates/404.html
+++ b/modules/core/frontend/templates/404.html
@@ -2,11 +2,12 @@
 
 <html>
 
+  {{{iris 'tags' '{"name":"headTags","exclude":"-jQuery"}'}}}
+
+  
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/system/admin.css" />
 <link rel="stylesheet" href="/modules/system/admin_menu.css" />
-
-    [[[tags headTags]]]
   
 <title>Iris</title>
 
