--- a/modules/core/frontend/templates/403.html
+++ b/modules/core/frontend/templates/403.html
@@ -2,8 +2,8 @@
 
 <html>
   
-    [[[tags headTags]]]
-
+{{{iris 'tags' '{"name":"headTags"}'}}}
+  
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/system/admin.css" />
 <link rel="stylesheet" href="/modules/system/admin_menu.css" />
