Allow no options to be passed through in embed

--- a/modules/core/system/templates/admin_wrapper.html
+++ b/modules/core/system/templates/admin_wrapper.html
@@ -28,7 +28,9 @@
     <p class="center">{{req.irisRoute.options.description}}</p>
 
     {{{iris_messages}}}
-    [[[tabs]]]
+    
+    {{{iris 'tabs'}}}
+    
     [[[MAINCONTENT]]]
 
   </section>
