convert forms to new embed system

--- a/modules/extra/entityUI/templates/admin_schema_field_widget.html
+++ b/modules/extra/entityUI/templates/admin_schema_field_widget.html
@@ -1,1 +1,9 @@
-  {{{iris 'form' '{"formID":"schemafieldwidgets","entityType":"$entityType","field":"$field","parent":"$parent"}'}}}
+{{#if parent}}
+
+{{{iris 'form' '{"formID":"schemafieldwidgets","entityType":"$entityType","field":"$field","parent":"$parent"}'}}}
+
+{{else}}
+
+{{{iris 'form' '{"formID":"schemafieldwidgets","entityType":"$entityType","field":"$field"}'}}}
+
+{{/if}}
