--- a/modules/extra/entityUI/templates/admin_schema_field.html
+++ b/modules/extra/entityUI/templates/admin_schema_field.html
@@ -1,2 +1,9 @@
+{{#if parent}}
+
 {{{iris 'form' '{"formID":"schemafield","entityType":"$entityType","field":"$field","parent":"$parent"}'}}}
 
+{{else}}
+
+{{{iris 'form' '{"formID":"schemafield","entityType":"$entityType","field":"$field"}'}}}
+
+{{/if}}
