Convert forms to new embed system

--- a/modules/core/user/templates/first_user.html
+++ b/modules/core/user/templates/first_user.html
@@ -1,4 +1,5 @@
-[[[tags headTags]]]
+{{{iris 'tags' '{"name":"headTags"}'}}}
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/system/admin.css" />
 <link rel="stylesheet" href="/modules/system/admin_menu.css" />
