--- a/modules/extra/entityUI/templates/admin_schema.html
+++ b/modules/extra/entityUI/templates/admin_schema.html
@@ -31,13 +31,11 @@
 
 {{else}}
 
-<!--<h1>Create new entity type</h1>-->
-
 <div class="admin-inputs">
 
   <div class="admin-header admin-header-padding">Create A New Schema</div>
   
-  {{{iris 'form' '{"formID":"schema","entityType":"$entityType","existing":false}'}}}
+  {{{iris 'form' '{"formID":"schema","existing":false}'}}}
 
 </div>
 
