--- a/themes/base/templates/html.html
+++ b/themes/base/templates/html.html
@@ -26,7 +26,7 @@
     <div id="content"> 
         <div class="container">
             
-            {{{iris_messages}}}
+            {{{iris embed="messages"}}}
             
             [[[MAINCONTENT]]]
             
