Menu block/embed naming fixes

--- a/modules/core/system/templates/admin_wrapper.html
+++ b/modules/core/system/templates/admin_wrapper.html
@@ -19,7 +19,7 @@
 
   <section class="col-sm-2" id="admin_sidebar">
     
-  {{{iris 'menu' '{"menuName":"admin_toolbar","template":"admin_sidebar"}'}}}
+  {{{iris 'menu' '{"menu":"admin_toolbar","template":"admin_sidebar"}'}}}
     
   </section>
   <section class="col-sm-10 col-sm-offset-2" id="main_content">
