--- a/modules/extra/blocks/templates/admin_blockform.html
+++ b/modules/extra/blocks/templates/admin_blockform.html
@@ -2,7 +2,7 @@
 
   <div class="admin-header admin-header-padding">Editing {{blocktype}} {{blockid}}</div>
 
-  {{{iris 'form' '{"formID":"blockForm_$blocktype","blockID":$blockid}'}}}
+  {{{iris 'form' '{"formID":"blockForm_$blocktype","blockID":"$blockid"}'}}}
 
 {{else}}
 
