--- a/modules/core/user/templates/first_user.html
+++ b/modules/core/user/templates/first_user.html
@@ -6,4 +6,4 @@
 
 <h1>Set up your root admin account</h1>
 
-{{{iris 'form' '{"formID":"set_first_user"}'}}}
+{{{iris 'form' '{"name":"set_first_user"}'}}}
