--- a/modules/extra/autopath/templates/admin_autopath.html
+++ b/modules/extra/autopath/templates/admin_autopath.html
@@ -2,6 +2,6 @@
 
 <h2>{{this}}</h2>
 
-{{{iris embed="form" formID="autopath" entityType=this}}}
+{{{iris embed="form" name="autopath" entityType=this}}}
 
 {{/each}}
