--- a/modules/extra/blocks/templates/admin_blockdelete.html
+++ b/modules/extra/blocks/templates/admin_blockdelete.html
@@ -1,4 +1,4 @@
 <div class="admin-header admin-header-padding">Delete Schema: {{entityType}}</div>
 
-{{{iris 'form' '{"formID":"blockDeleteForm","blockType":"$blocktype","blockID":"$blockid"}'}}}
+{{{iris 'form' '{"name":"blockDeleteForm","blockType":"$blocktype","blockID":"$blockid"}'}}}
 
