--- a/modules/extra/blocks/templates/admin_blockslist.html
+++ b/modules/extra/blocks/templates/admin_blockslist.html
@@ -21,7 +21,7 @@
 
   {{#if blockTypes}}
 
-    {{{iris 'form' '{"formID":"newBlockForm"}'}}}
+    {{{iris 'form' '{"name":"newBlockForm"}'}}}
 
   {{else}}
 
