--- a/modules/extra/entityUI/templates/admin_entity.html
+++ b/modules/extra/entityUI/templates/admin_entity.html
@@ -1,9 +1,9 @@
 {{#if eid}}
   
-{{{iris 'form' '{"formID":"entity","eid":$eid,"entityType":"$type"}'}}}
+{{{iris 'form' '{"name":"entity","eid":$eid,"entityType":"$type"}'}}}
 
 {{else}}
   
-{{{iris 'form' '{"formID":"entity","entityType":"$type"}'}}}
+{{{iris 'form' '{"name":"entity","entityType":"$type"}'}}}
   
 {{/if}}
