--- a/modules/extra/entityUI/templates/admin_schema.html
+++ b/modules/extra/entityUI/templates/admin_schema.html
@@ -25,7 +25,7 @@
   <div id="current-fields">
     
 
-      {{{iris 'form' '{"formID":"schema","entityType":"$entityType","existing":true}'}}}
+      {{{iris 'form' '{"name":"schema","entityType":"$entityType","existing":true}'}}}
 
   </div>
 
@@ -35,7 +35,7 @@
 
   <div class="admin-header admin-header-padding">Create A New Schema</div>
   
-  {{{iris 'form' '{"formID":"schema","existing":false}'}}}
+  {{{iris 'form' '{"name":"schema","existing":false}'}}}
 
 </div>
 
