--- a/modules/extra/entityUI/templates/admin_schema_delete.html
+++ b/modules/extra/entityUI/templates/admin_schema_delete.html
@@ -24,7 +24,7 @@
 
   <div id="current-fields">
     
-      {{{iris 'form' '{"formID":"schemaDelete","entityType":"$entityType"}'}}}
+      {{{iris 'form' '{"name":"schemaDelete","entityType":"$entityType"}'}}}
 
   </div>
 
