--- a/modules/extra/entityUI/templates/admin_schema_field_delete.html
+++ b/modules/extra/entityUI/templates/admin_schema_field_delete.html
@@ -1,1 +1,1 @@
-{{{iris 'form' '{"formID":"schemafieldDelete","entityType":"$entityType","field":"$field"}'}}}
+{{{iris 'form' '{"name":"schemafieldDelete","entityType":"$entityType","field":"$field"}'}}}
