--- a/modules/extra/entityUI/templates/admin_schema_manage_fields.html
+++ b/modules/extra/entityUI/templates/admin_schema_manage_fields.html
@@ -40,11 +40,11 @@
   
   {{#if parent}}
   
-  {{{iris 'form' '{"formID":"schemaFieldListing","entityType":"$entityType","parent":"$parent"}'}}}
+  {{{iris 'form' '{"name":"schemaFieldListing","entityType":"$entityType","parent":"$parent"}'}}}
   
   {{else}}
   
-    {{{iris 'form' '{"formID":"schemaFieldListing","entityType":"$entityType"}'}}}
+    {{{iris 'form' '{"name":"schemaFieldListing","entityType":"$entityType"}'}}}
   
   {{/if}}
 
