--- a/modules/extra/menu_ui/templates/admin_menu_form.html
+++ b/modules/extra/menu_ui/templates/admin_menu_form.html
@@ -1,6 +1,6 @@
 <div class="admin-inputs">
   <div class="admin-header admin-header-padding">Create new menu</div>
 
-{{{iris 'form' '{"formID":"menu"}'}}}
+{{{iris 'form' '{"name":"menu"}'}}}
   
 </div>
