--- a/modules/extra/roles_ui/templates/administer-roles.html
+++ b/modules/extra/roles_ui/templates/administer-roles.html
@@ -1,4 +1,4 @@
 <div class="admin-inputs" class="no-fieldset-bg">
   <div class="admin-header admin-header-padding">Adminsiter roles</div>
-{{{iris 'form' '{"formID":"manageRoles"}'}}}
+{{{iris 'form' '{"name":"manageRoles"}'}}}
 </div>
