--- a/modules/extra/textfilters/templates/admin_textfilters_delete.html
+++ b/modules/extra/textfilters/templates/admin_textfilters_delete.html
@@ -1,1 +1,1 @@
-{{{iris 'form' '{"formID":"textfilter_delete","formatName":"$formatname"}'}}}
+{{{iris 'form' '{"name":"textfilter_delete","formatName":"$formatname"}'}}}
