--- a/modules/extra/textfilters/templates/admin_textfilters_form.html
+++ b/modules/extra/textfilters/templates/admin_textfilters_form.html
@@ -1,9 +1,9 @@
 {{#if formatname}}
 
-{{{iris 'form' '{"formID":"textfilter","formatname":"$formatname"}'}}}
+{{{iris 'form' '{"name":"textfilter","formatname":"$formatname"}'}}}
 
 {{else}}
 
-{{{iris 'form' '{"formID":"textfilter"}'}}}
+{{{iris 'form' '{"name":"textfilter"}'}}}
 
 {{/if}}
