--- a/modules/extra/triggers/templates/admin_triggers_delete.html
+++ b/modules/extra/triggers/templates/admin_triggers_delete.html
@@ -1,2 +1,2 @@
-{{{iris 'form' '{"formID":"action_delete","action":"$action"}'}}}
+{{{iris 'form' '{"name":"action_delete","action":"$action"}'}}}
 
