--- a/modules/extra/triggers/templates/admin_triggers_form.html
+++ b/modules/extra/triggers/templates/admin_triggers_form.html
@@ -3,11 +3,11 @@
 
 {{#if action}}
 
-{{{iris 'form' '{"formID":"actions","action":"$action"}'}}}
+{{{iris 'form' '{"name":"actions","action":"$action"}'}}}
 
 {{else}}
 
-{{{iris 'form' '{"formID":"actions"}'}}}
+{{{iris 'form' '{"name":"actions"}'}}}
 
 {{/if}}
 
