--- a/modules/core/system/templates/admin_login.html
+++ b/modules/core/system/templates/admin_login.html
@@ -4,7 +4,7 @@
   <div id="login-logo">Iris</div>
   <div id="login-form">
     <h1>Sign in</h1>
-      {{{iris 'form' '{"formID":"login"}'}}}
+      {{{iris 'form' '{"name":"login"}'}}}
   </div>
 
 </section>
