--- a/modules/extra/entityUI/templates/admin_entity_delete.html
+++ b/modules/extra/entityUI/templates/admin_entity_delete.html
@@ -1,3 +1,3 @@
 {{text}}
 
-{{{iris 'form' '{"formID":"entity_delete","eid":$id,"entityType":"$type"}'}}}
+{{{iris 'form' '{"name":"entity_delete","eid":$id,"entityType":"$type"}'}}}
