--- a/modules/extra/menu_ui/templates/admin_menu_form_delete.html
+++ b/modules/extra/menu_ui/templates/admin_menu_form_delete.html
@@ -1,3 +1,3 @@
 <h2>Delete menu {{menuName}}</h2>
 
-{{{iris 'form' '{"formID":"menu_delete","menuName":"$menuName"}'}}}
+{{{iris 'form' '{"name":"menu_delete","menuName":"$menuName"}'}}}
