--- a/modules/extra/menu_ui/templates/admin_menu_form_edit.html
+++ b/modules/extra/menu_ui/templates/admin_menu_form_edit.html
@@ -1,3 +1,3 @@
 <h1>Edit menu {{menuName}}</h1>
 
-{{{iris 'form' '{"formID":"menu","menuName":"$menuName"}'}}}
+{{{iris 'form' '{"name":"menu","menuName":"$menuName"}'}}}
