--- a/modules/extra/permissionsUI/templates/admin_permissions.html
+++ b/modules/extra/permissionsUI/templates/admin_permissions.html
@@ -1,3 +1,3 @@
 <div class="admin-header admin-header-padding">Permissions</div>
 
-{{{iris 'form' '{"formID":"permissions"}'}}}
+{{{iris 'form' '{"name":"permissions"}'}}}
