fixed admin toolbar display issue as it display the html as a string

--- a/themes/base/templates/html.html
+++ b/themes/base/templates/html.html
@@ -15,7 +15,7 @@
 
   <body class="{{current.entityType}}-{{current.eid}}">
       
-    {{iris embed="menu" name="admin_toolbar"}}
+    {{{iris embed="menu" name="admin_toolbar"}}}
     
     <header id="page-header">
         
